[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Resources/Fonts/TitleFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Resources/Fonts/MenuFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://MainMenu/MenuButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Resources/Fonts/MenuButtonFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Resources/Sound/menu.wav" type="AudioStream" id=6]
[ext_resource path="res://Resources/Sound/Weapon1.wav" type="AudioStream" id=7]
[ext_resource path="res://Resources/Sound/ui_menu_button_beep_01.wav" type="AudioStream" id=8]

[node name="MainMenu" type="ColorRect"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1280, 720 )
color = Color( 0, 0, 0, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LayoutV" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="LayoutV"]
margin_right = 1280.0
margin_bottom = 237.0
rect_min_size = Vector2( 0, 150 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.658824, 0.560784, 0.560784, 1 )
text = "Space Adventure 
Time"
align = 1
valign = 1

[node name="LayoutH" type="HBoxContainer" parent="LayoutV"]
margin_top = 241.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_vertical = 3
alignment = 1

[node name="Control" type="Control" parent="LayoutV/LayoutH"]
margin_right = 197.0
margin_bottom = 479.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="Buttons" type="VBoxContainer" parent="LayoutV/LayoutH"]
margin_left = 201.0
margin_right = 596.0
margin_bottom = 479.0
size_flags_horizontal = 3

[node name="Control2" type="Control" parent="LayoutV/LayoutH/Buttons"]
margin_right = 395.0
margin_bottom = 23.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="Start" parent="LayoutV/LayoutH/Buttons" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 27.0
margin_right = 395.0
margin_bottom = 147.0
custom_fonts/font = ExtResource( 5 )
text = "START GAME"

[node name="Control3" type="Control" parent="LayoutV/LayoutH/Buttons"]
margin_top = 151.0
margin_right = 395.0
margin_bottom = 175.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="Credits" parent="LayoutV/LayoutH/Buttons" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 179.0
margin_right = 395.0
margin_bottom = 299.0
custom_fonts/font = ExtResource( 5 )
text = "CREDITS"

[node name="Control4" type="Control" parent="LayoutV/LayoutH/Buttons"]
margin_top = 303.0
margin_right = 395.0
margin_bottom = 327.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="Quit" parent="LayoutV/LayoutH/Buttons" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 331.0
margin_right = 395.0
margin_bottom = 451.0
custom_fonts/font = ExtResource( 5 )
text = "QUIT"

[node name="Control" type="Control" parent="LayoutV/LayoutH/Buttons"]
margin_top = 455.0
margin_right = 395.0
margin_bottom = 479.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="Control2" type="Control" parent="LayoutV/LayoutH"]
margin_left = 600.0
margin_right = 679.0
margin_bottom = 479.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="Audio" type="VBoxContainer" parent="LayoutV/LayoutH"]
margin_left = 683.0
margin_right = 1078.0
margin_bottom = 479.0
size_flags_horizontal = 3

[node name="Sound" type="VBoxContainer" parent="LayoutV/LayoutH/Audio"]
margin_right = 395.0
margin_bottom = 157.0
size_flags_vertical = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="LayoutV/LayoutH/Audio/Sound"]
margin_right = 395.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 3 )
text = "sound"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="HSlider" parent="LayoutV/LayoutH/Audio/Sound"]
margin_top = 54.0
margin_right = 395.0
margin_bottom = 70.0
min_value = -40.0
max_value = 20.0
step = 0.2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Effects" type="VBoxContainer" parent="LayoutV/LayoutH/Audio"]
margin_top = 161.0
margin_right = 395.0
margin_bottom = 318.0
size_flags_vertical = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="LayoutV/LayoutH/Audio/Effects"]
margin_right = 395.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 3 )
text = "Effects"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Effects" type="HSlider" parent="LayoutV/LayoutH/Audio/Effects"]
margin_top = 54.0
margin_right = 395.0
margin_bottom = 70.0
min_value = -40.0
max_value = 20.0
step = 0.2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="VBoxContainer" parent="LayoutV/LayoutH/Audio"]
margin_top = 322.0
margin_right = 395.0
margin_bottom = 479.0
size_flags_vertical = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="LayoutV/LayoutH/Audio/Music"]
margin_right = 395.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 3 )
text = "music"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="HSlider" parent="LayoutV/LayoutH/Audio/Music"]
margin_top = 54.0
margin_right = 395.0
margin_bottom = 70.0
min_value = -40.0
max_value = 20.0
step = 0.2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control3" type="Control" parent="LayoutV/LayoutH"]
margin_left = 1082.0
margin_right = 1280.0
margin_bottom = 479.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true
bus = "Music"

[node name="TestEffect" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 640, 360 )
stream = ExtResource( 7 )
pitch_scale = 1.2
bus = "Effects"

[node name="ButtonSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "Effects"

[node name="CreditsText" type="Label" parent="."]
margin_left = 822.858
margin_top = 119.385
margin_right = 1217.86
margin_bottom = 169.385
custom_fonts/font = ExtResource( 3 )
text = "Made by Ktosox 
& Ikuti"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="LayoutV/LayoutH/Buttons/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="LayoutV/LayoutH/Buttons/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="LayoutV/LayoutH/Buttons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="value_changed" from="LayoutV/LayoutH/Audio/Sound/Sound" to="." method="_on_Sound_value_changed"]
[connection signal="value_changed" from="LayoutV/LayoutH/Audio/Effects/Effects" to="." method="_on_Effects_value_changed"]
[connection signal="value_changed" from="LayoutV/LayoutH/Audio/Music/Music" to="." method="_on_Music_value_changed"]
